<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Volux</string>
    <string name="service_running">Volux service is running</string>
    <string name="service_description">Assistive volume control overlay</string>
    <string name="volume_up">Volume Up</string>
    <string name="volume_down">Volume Down</string>
    <string name="settings">Settings</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="floating_buttons">Floating Buttons</string>
    <string name="gesture_control">Gesture Control</string>
    <string name="both_modes">Both Modes</string>
    <string name="button_size">Button Size</string>
    <string name="opacity">Opacity</string>
    <string name="overlay_permission_required">Overlay permission is required for this app to work</string>
    <string name="notification_permission_required">Notification permission is required</string>
</resources>